# synthetic-data-universe

./: .env.example  Readme.md  cdp_api_key.json  data_A.jsonl  data_B.jsonl  input.jsonl  pyproject.toml  registerip.ts  requirements.txt
src/synthetic_data_universe/: crew.py  main.py
src/synthetic_data_universe/config/: agents.yaml  tasks.yaml
src/synthetic_data_universe/tools/: custom_tool.py
