[project]
name = "synthetic_data_universe"
version = "0.1.0"
description = "synthetic-data-universe using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
synthetic_data_universe = "synthetic_data_universe.main:run"
run_crew = "synthetic_data_universe.main:run"
train = "synthetic_data_universe.main:train"
replay = "synthetic_data_universe.main:replay"
test = "synthetic_data_universe.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
